# plan-executor

./: .gitmodules  .tmp-execute-plan-state.json  .tmp-subtask-plan-validation-attempt-1.md  .tmp-subtask-wave-1-batch-1-1.md  .tmp-subtask-wave-5-batch-1-1.md  .tmp-validation-state.json  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  cliff.toml  install.sh
.github/workflows/: release.yml
.my/plans/: plan-jobs-subcommand.md  plan-plan-executor.md  plan-remote-execution-via-github-actions.md
docs/discussions/: 2026-04-28-job-framework-design.md
docs/remote-execution/: SECURITY.md  execute-plan.yml
docs/superpowers/plans/: 2026-04-01-plan-executor-handoff-protocol.md  2026-04-08-remote-execution-via-github-actions.md  2026-05-06-deviation-journal-foreground-coverage.md  2026-05-06-deviation-journal.md
docs/superpowers/specs/: 2026-04-01-plan-executor-handoff-protocol-design.md  2026-04-08-remote-execution-via-github-actions-design.md  2026-05-06-deviation-journal-design.md  2026-05-06-deviation-journal-foreground-coverage-design.md
mock/: config-handoff-main-error.json  config-handoff-subagent-error.json  config-handoff.json  config.json  main-agent-handoff-error.sh  main-agent-handoff.sh  main-agent.sh  sub-agent-error.sh  sub-agent.sh
mock/plan/: test-plan.md
src/: cli.rs  compile.rs  config.rs  daemon.rs  deviation_journal.rs  executor.rs  finding.rs  formatter.rs  handoff.rs  helper.rs  ipc.rs  jobs.rs  lib.rs  main.rs  notifications.rs  plan.rs  pricing.rs  proctree.rs  remote.rs  scheduler.rs  schema.rs  schema_registry.rs  validate.rs  watcher.rs
src/job/: cli.rs  metrics.rs  mod.rs  recovery.rs  registry.rs  runtime.rs  step.rs  storage.rs  types.rs
src/job/steps/: mod.rs  plan.rs  pr_finalize.rs
src/schemas/: deviation_journal.schema.json  deviation_journal_entry.schema.json  tasks.schema.json
src/schemas/helpers/review_execution_output/: output.schema.json
src/schemas/helpers/run_reviewer_team/: output.schema.json
src/schemas/helpers/validate_execution_plan/: output.schema.json
src/supervisor/: detector.rs  mod.rs  rollback.rs  violation.rs  wiring.rs
src/supervisor/prompts/: dangling_narration.md  forbidden_tool.md  handoffs_missing.md  mod.rs  post_handoff_tool_use.md  schedule_wakeup.md  skill_boundary.md  state_malformed.md  unbounded_poll.md
src/tui/: app.rs  mod.rs  ui.rs
tests/: config_remote_repo_test.rs  config_test.rs  d3_full_plan.rs  deviation_journal_foreground.rs  formatter_test.rs  gha_dispatcher.rs  handoff_test.rs  helper.rs  jobs_subcommand_test.rs  metrics.rs  plan_execution_mode_test.rs  plan_test.rs  pr_finalize.rs  pr_finalize_remote.rs  pricing_test.rs  remote_test.rs  validate_cli_test.rs
tests/fixtures/: fake-claude.sh
tests/fixtures/d3-tiny-plan/: fake-claude-d3.sh
tests/fixtures/d3-tiny-plan/tasks/: t1.md  t2.md  t3.md
