[package]
name = "plan-executor"
version = "0.10.0"
edition = "2021"
description = "Monitor and execute Claude plan files"
default-run = "plan-executor"

[[bin]]
name = "plan-executor"
path = "src/main.rs"

[dependencies]
# Async runtime (includes process feature for subprocess spawning)
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Stream-json rendering (git submodule at stream-json-view/)
sjv = { path = "stream-json-view" }


# Daemonize
daemonize = "0.5"

# Home directory
dirs = "6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for job IDs
uuid = { version = "1", features = ["v4"] }

# Unicode display-width (wide chars / CJK / emoji)
unicode-width = "0.2"

# Unix process group signals
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
dirs = "6"
